# DataLab

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  404.html  ADD_NEW_DATASET.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  README.md  blog.html  convert_dataset.sh  generate_prompt_skeleton.py  generate_prompt_sketch.py  get_operations.py  index.html  local.py  markdown-page.html  memo.md  operations_info.json  package.json  resplits_json.py  setup.cfg  setup.py  sitemap.xml  test.py  test_get_options.py  train.json
.circleci/: config.yml  deploy.sh
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/conda/: meta.yaml
.github/workflows/: ci.yml  publish-to-pypi.yml  release-conda.yml
assets/css/: styles.f0aa1b77.css
assets/js/: 01a85c17.feaac9db.js  035467e9.2c1a5198.js  035467e9.484102d5.js  035467e9.6db597cb.js  035467e9.ba4144f3.js  0741a44e.221c3580.js  0741a44e.728a888a.js  0741a44e.89ef6249.js  (+134 more)
benchmarks/: benchmark_array_xd.py
blog/: archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
client/: add_my_dataset.py  calculate_feature.py  calculate_feature_ag_news.py  client.py  example_funcs.py  openapi.py  test_add_dataset.py  test_add_dataset_ag_news.py  test_add_dataset_mr.py  upload_jsonl.py  utils_datalab.py  utils_funcs.py
datalabs/: .coverage  __init__.py  arrow_dataset.py  arrow_reader.py  arrow_writer.py  builder.py  combine.py  config.py  data_files.py  dataset_dict.py  enums.py  fingerprint.py  info.py  inspect.py  iterable_dataset.py  keyhash.py  load.py  metric.py  naming.py  prompt.py  search.py  splits.py  streaming.py  table.py  task_dataset.py
datasets/: README.md  promptsource.pkl  stats.md
docs/: add_language_info.md  add_new_datasets.md  add_new_datasets_into_web_platform.md  add_new_task_schema.md  analyzing_summarization_datasets  analyzing_summarization_datasets.md  datasets_to_add.md  how_to_name_a_feature.md  intro.html  intro.md  introduction_of_summarization_datasets.md  normalize_feature_names.md  normalized_feature_names.json  use_cases.md
templates/: new_dataset_script.py  new_metric_script.py
tests/: conftest.py  hub_fixtures.py  test_apply.py  test_arrow_dataset.py  test_caching.py  test_data_files.py  test_dataset_cards.py  test_dataset_common.py  test_dummy_data_autogenerate.py  test_file_encoding.py  test_file_utils.py  test_hf_gcp.py  test_load.py  test_metric_common.py  test_mongodb.py  test_streaming_download_manager.py  test_task_prompt.py  test_upstream_hub.py
utils/: dataset_info.jsonl  dataset_info_dev.jsonl  datasets_info.json  feature_desc.py  get_dataset_info.py  get_datasets.py  get_task_tree.py
(+1046 files in other folders)
