[metadata]
license_file = LICENSE

[isort]
filter_files = true
force_sort_within_sections = true
multi_line_output = 3
order_by_type = false
profile = black
line_length = 88

[flake8]
extend-ignore = E203, W503， E501
max-line-length = 88
exclude =
    __pycache__
    venv
    get_operations.py
    datasets/
    test
filename = ./src/datalabs/*.py, ./setup.py
per-file-ignores =
    metrics/*:F401
