[metadata]
name = datalabs
version = 0.4.14
description = Datalabs
long_description = file: README.md
long_description_content_type = text/markdown
author = expressai
author_email = stefanpengfei@gamil.com
url = https://github.com/expressai/datalab
download_url = https://github.com/expressai/datalab/tags
license = Apache 2.0
keywords = dataset
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    numpy>=1.17
    pyarrow>=3.0.0,!=4.0.0
    dill
    pandas
    requests>=2.19.0
    tqdm>=4.62.1
    dataclasses; python_version < "3.7"
    xxhash
    multiprocess
    pathos
    importlib_metadata; python_version < "3.8"
    fsspec[http]>=2021.05.0
    aiohttp
    huggingface_hub>=0.1.0,<1.0.0
    packaging
    pymongo[srv]
    spacy
    checklist
    lexicalrichness
    sacrebleu
    compare_mt
    scikit-learn
    seqeval
    jieba
    apache-beam

[options.package_data]
datalabs = py.typed, scripts/templates/*
datalabs.utils.resources = *.json, *.yaml
datalabs.operations.featurize.pre_models = *.pkl, *.json
datalabs.operations.featurize.resources.gender_data = *.json
datalabs.operations.edit.resources = *.json, *.txt, *.names, *.tsv

[options.entry_points]
console_scripts =
    datalabs-cli = datalabs.commands.datasets_cli:main

[options.extras_require]
dev = black==22.3.0; flake8==4.0.1; isort>=5.6.4
quality = black==22.3.0; flake8==4.0.1; isort>=5.6.4

[isort]
filter_files = true
force_sort_within_sections = true
multi_line_output = 3
order_by_type = false
profile = black
src_paths = datalabs

[flake8]
application-import-names = datalabs
exclude =
    __pycache__,
    datasets,
extend-ignore = E203, W503
filename = ./datalabs/*.py, ./setup.py
max-line-length = 88
